# async-graphql-codegen

./: .gitignore  Cargo.toml  README.md  async-graphql-codegen.code-workspace
.github/workflows/: cy.yml
aqlgen/: Cargo.toml
aqlgen-renderer/: Cargo.toml
aqlgen-renderer/src/document_wrapper/: enum_value_wrapper.rs  input_object_type_wrapper.rs  input_value_wrapper.rs  interface_type_wrapper.rs  mutations_type_wrapper.rs  object_type_wrapper.rs  scalar_type_wrapper.rs  subscription_root_type_wrapper.rs  subscription_type_wrapper.rs  type_wrapper.rs  union_type_wrapper.rs
aqlgen-renderer/src/renderer/: save.rs
aqlgen-renderer/src/renderer/enum_type/: renderer.rs
aqlgen-renderer/src/renderer/input_object/: renderer.rs
aqlgen-renderer/src/renderer/internal/: dependencies.rs  field.rs
aqlgen-renderer/src/renderer/mod_file/: sub_module_renderer.rs
aqlgen-renderer/src/renderer/mutation/: renderer.rs
aqlgen-renderer/src/renderer/object_type/: renderer.rs
aqlgen-renderer/src/renderer/scalar/: renderer.rs
aqlgen-renderer/src/renderer/union_type/: renderer.rs
aqlgen/src/: codegen.rs
codegen-for-async-graphql-renderer/: Cargo.toml
codegen-for-async-graphql-renderer/src/: lib.rs
codegen-for-async-graphql-renderer/src/base/: context.rs  mod.rs
codegen-for-async-graphql-renderer/src/document_wrapper/: enum_type_wrapper.rs  field_wrapper.rs  input_object_type_wrapper.rs  input_value_wrapper.rs  interface_type_wrapper.rs  mod.rs  mutation_type_wrapper.rs  mutations_type_wrapper.rs  object_type_wrapper.rs  scalar_type_wrapper.rs  subscription_root_type_wrapper.rs  subscription_type_wrapper.rs  type_wrapper.rs  union_type_wrapper.rs
codegen-for-async-graphql-renderer/src/renderer/: mod.rs
codegen-for-async-graphql-renderer/src/renderer/enum_type/: mod.rs  renderer.rs
codegen-for-async-graphql-renderer/src/renderer/input_object/: renderer.rs
codegen-for-async-graphql-renderer/src/renderer/interface/: renderer.rs
codegen-for-async-graphql-renderer/src/renderer/internal/: dependencies.rs  field.rs
codegen-for-async-graphql-renderer/src/renderer/mod_file/: root_module_renderer.rs
codegen-for-async-graphql-renderer/src/renderer/mutation/: renderer.rs
codegen-for-async-graphql-renderer/src/renderer/object_type/: renderer.rs
codegen-for-async-graphql-renderer/src/renderer/scalar/: renderer.rs
codegen-for-async-graphql-renderer/src/renderer/subscription/: renderer.rs
examples/: Cargo.toml  schema.graphql
examples/codegen-for-async-graphql-example/: Cargo.toml  schema.graphql
examples/codegen-for-async-graphql-example/src/: main.rs
examples/codegen-for-async-graphql-example/src/model/: mod.rs
examples/codegen-for-async-graphql-example/src/model/input_object_type/: input.rs
examples/codegen-for-async-graphql-example/src/model/object_type/: mod.rs  output.rs  query.rs
examples/src/: main.rs
gql-gen/: Cargo.toml
gql-gen/src/: codegen.rs
gql-renderer/: Cargo.toml
gql-renderer/src/document_wrapper/: enum_type_wrapper.rs  field_wrapper.rs  input_value_wrapper.rs  interface_type_wrapper.rs  mod.rs  mutation_type_wrapper.rs  scalar_type_wrapper.rs  subscription_type_wrapper.rs  type_wrapper.rs
gql-renderer/src/renderer/enum_type/: mod.rs  renderer.rs
gql-renderer/src/renderer/input_object/: renderer.rs
gql-renderer/src/renderer/interface/: renderer.rs
gql-renderer/src/renderer/internal/: dependencies.rs  field.rs
gql-renderer/src/renderer/mod_file/: root_module_renderer.rs  sub_module_renderer.rs
gql-renderer/src/renderer/object_type/: renderer.rs
gql-renderer/src/renderer/scalar/: renderer.rs
gql-renderer/src/renderer/subscription/: renderer.rs
src/: main.rs
