[package]
name = "codegen-for-async-graphql"
version = "0.2.7"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>", "uselessgoddess <dodickgod@gmail.com>"]
edition = "2018"
description = "Code generation for async-graphql 4"
publish = true
license = "MIT"
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"
keywords = ["graphql", "async-graphql"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
clap = "3.1"
clap_derive = "3.1"
codegen-for-async-graphql-renderer= { path = "codegen-for-async-graphql-renderer", version = "0.2.7" }

[workspace]
members = [
    "codegen-for-async-graphql-renderer",
    "examples/codegen-for-async-graphql-example",
]

exclude = [
    "tmp/*",
]
