[package]
name = "aqlgen-renderer"
version = "0.5.0"
authors = [
    "Atsuhiro Takahashi <fxyoxbjis@gmail.com>",
    "uselessgoddess <dodickgod@gmail.com>",
    "Linksplatform Team <linksplatformtechnologies@gmail.com>",
]
edition = "2021"
description = "Schema generator for async-graphql 4.x"
license = "MIT"
homepage = "https://github.com/linksplatform/aqlgen/tree/master/aqlgen-renderer"
repository = "https://github.com/linksplatform/aqlgen/tree/master/aqlgen-renderer"
keywords = ["graphql", "async-graphql"]
categories = ["network-programming"]

[dependencies]
syn = "1.0"
heck = "0.4"
itertools = "0.10"
async-graphql = "4.0"
async-graphql-parser = "4.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0.18"
toolchain_find = "0.1"
