[package]
name = "codegen-for-async-graphql-renderer"
version = "0.2.7"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"
description = "Internal code generation crate for async-graphql"
publish = true
license = "MIT"
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"
keywords = ["graphql", "async-graphql"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
heck = "0.4"
itertools = "0.10"
async-graphql = "4.0"
async-graphql-parser = "4.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0.18"
toolchain_find = "0.1"
