[package]
name = "axum-codegen-example"
version = "0.0.1"
authors = ["tehnix <ckl@codetalk.io>"]
edition = "2021"

[dependencies]
async-graphql = "4.0.15"
async-graphql-axum = "4.0.15"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.20"
axum = { version = "0.5.16", features = ["headers"] }
