[package]
name = "codegen-for-async-graphql-example"
version = "0.2.0"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2018"
publish = false
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"

[dependencies]
async-std = "1.11.0"
async-graphql = "4.0.0"
async-graphql-actix-web = "4.0.0"
actix-web = "4.0.1"
tokio = { version = "1.18.2", features = ["full"] }
